--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.1"
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "select2": "^4.1.0-rc.0"
     }
 }
