--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
+        "bootstrap-icons": "^1.10.2",
         "select2": "^4.1.0-rc.0"
     }
 }
